--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "expo": "~51.0.6",
+    "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
     "expo-haptics": "~13.0.1",
@@ -33,15 +34,19 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "~3.10.1",
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "expo-blur": "~13.0.2"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "@babel/preset-typescript": "^7.24.6",
+    "@types/react": "~18.2.79",
+    "@types/react-native": "^0.73.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
