--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
-    "expo": "~51.0.6",
+    "expo": "~51.0.14",
     "expo-blur": "~13.0.2",
-    "expo-constants": "~16.0.1",
-    "expo-font": "~12.0.5",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.7",
     "expo-haptics": "~13.0.1",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
+    "expo-router": "~3.5.16",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.0",
     "haptics": "^1.0.0",
     "lottie-react-native": "6.7.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.74.2",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
